fix logo sizing and header wrap

--- a/assets/scss/components/_menu.scss
+++ b/assets/scss/components/_menu.scss
@@ -5,6 +5,9 @@
 			display: flex;
 			flex-direction: row;
 			justify-content: space-between;
+			max-width: 1240px;
+			padding: 0 10px;
+			margin: 0 auto;
 
 			> div {
 				max-width: 50%;
@@ -32,6 +35,10 @@
 			}
 	}
 }
+
+.header-right {
+	align-items: flex-end;
+}
 .menu-text {
      list-style-type: none;
      padding: 0;
@@ -44,12 +51,12 @@
 		font-weight: 300;
 
 		img {
-				max-height: 100px;
+				max-height: 80px;
 				text-align: center;
 				object-fit: scale-down;
 				width: 60%;
 
-				@media screen and (max-width: 415px) {
+				@media screen and (max-width: 480px) {
 					width: 100%;
 				}
 		}
